# CustomMTGDeckbuilder

./: .env  .gitignore  README.md  Rocket.toml
backend/: Cargo.toml
backend/src/: main.rs  schema.rs  utils.rs
backend/src/datamodels/: deck.rs  mod.rs  models.rs  response.rs  users.rs
backend/src/db/: connection.rs
backend/src/routes/: auth.rs  cards.rs  decks.rs  mod.rs
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js
frontend/src/components/: AuthContext.js  Cardlist.js  DeckCardDisplay.js  Decklist.js  Login.js  Manaformatter.js  Navbar.js  PersistentThemeSwitcher.js  Register.js  SingleDeck.js  ThemeSwitcher.js  UnderConstruction.js  Welcome.js
frontend/src/css/: Navbar.css  mana-cost.css
frontend/src/js/: authentication.js  common_functions.js
src/: main.rs
src/data-models/: models.rs
