[workspace]
resolver = "2"

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] } # Make sure you use the latest version
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
serde_json = "1.0"
dotenv = "0.15" # For environment variables
tokio = { version = "1", features = ["full"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
rocket_cors = "0.6.0"
chrono = {  version = "0.4.39", features = ["serde"] }
rand = "0.8.5"
